# pyops-service-toolkit

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  VERSION.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: aut-release.yml  auto-release.yml  check-coverage.yml  check-version-on-pr.yml  docs.yml  lint.yml  run-tests.yml
docs/ops_utils/: azure_utils.md  bq_utils.md  csv_util.md  gcp_utils.md  index.md  thread_pool_executor_util.md  token_util.md  vars.md
ops_utils/: __init__.py  azure_utils.py  bq_utils.py  csv_util.py  gcp_cloud_functions.py  gcp_utils.py  get_api_yaml.py  google_calendar.py  google_sheets_util.py  jira_util.py  request_util.py  terra_util.py  thread_pool_executor_util.py  token_util.py  vars.py
ops_utils/ops_terra_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ops_utils/requests_utils/: __init__.py  mock_util.py  request_util.py
ops_utils/tdr_api_schema/: __init__.py  create_dataset_schema.py  update_dataset_schema.py
ops_utils/tdr_utils/: __init__.py  renaming_util.py  tdr_api_utils.py  tdr_bq_utils.py  tdr_ingest_utils.py  tdr_job_utils.py  tdr_schema_utils.py  tdr_table_utils.py
ops_utils/terra_utils/: __init__.py  terra_util.py  terra_workflow_configs.py
ops_utils/tests/: test_bq_utils.py  test_csv_util.py  test_gcp_cloud_functions.py  test_gcp_utils.py  test_google_calendar.py  test_google_sheets.py  test_google_sheets_util.py  test_init.py  test_jira_utils.py  test_renaming_util.py  test_tdr_api_utils.py  test_tdr_bq_utils.py  test_terra_utils.py  (+5 more)
(+92 files in other folders)
