[tool.autopep8]
max_line_length = 122
ignore = ["E265"]
[tool.pytest.ini_options]
addopts = "-re -q"
testpaths = [
    "python/tests/unit_tests",
    "python/tests/integration_tests",
]

[project]
name = "ops_terra_utils"
version = "0.0.1"
dependencies = [
    "requests",
    "google-cloud-resource-manager",
    "wheel",
    "google-resumable-media",
    "google-cloud-storage==2.17.0",
    "google-auth==2.29.0",
    "google-auth-httplib2==0.2.0",
    "google-cloud-logging",
    "google-auth-oauthlib==1.2.1",
    "google-cloud-bigquery",
    "azure-identity==1.15.0",
    "azure-storage-blob==12.19.1",
    "oauth2client",
    "backoff",
    "aiohttp",
    "pytz",
    "pandas",
    "db-dtypes",
    "pydantic==2.9.1",
    "pyyaml",
    "humanfriendly",
    "responses",
    "gitpython",
    'importlib-metadata; python_version<"3.10"',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["ops_utils"]
exclude = ["ops_utils.tests*"]  # empty by default
